--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </style>
 </head>
 
-<body>
+<body ondragover="event.preventDefault()" ondrop="handleDrop(event)">
     <div id="main-install-btn"
         style="position: absolute; top: 20px; right: 60px; font-size: 1.5rem; cursor: pointer; display: none; z-index: 1001;"
         onclick="installApp()">📲</div>
@@ -255,70 +255,58 @@
     </div>
 
     <div id="chat-area">
-        <div class="chat-header">
-            <div style="display: flex; align-items: center; gap: 10px;">
+        <div class="chat-header"
+            style="display:flex; justify-content:space-between; align-items:center; background:white; padding:10px; border-radius:12px; margin-bottom:5px;">
+            <div style="display:flex; align-items:center; gap:10px;">
                 <span onclick="goBack()" style="cursor:pointer; font-size:1.2rem;">⬅️</span>
                 <div id="room-title" style="font-weight:bold;"></div>
             </div>
             <button onclick="leaveChat()"
-                style="background:#ff4d4d; color:white; border:none; padding:5px 15px; border-radius:8px; cursor:pointer;">완전
-                퇴장</button>
+                style="background:#ff4d4d; color:white; border:none; padding:5px 10px; border-radius:8px;">퇴장</button>
         </div>
         <ul id="messages"></ul>
         <form id="form">
             <input type="file" id="file-input" style="display:none;" onchange="uploadFile(this)">
             <button type="button" style="background:none; border:none; font-size:1.2rem; cursor:pointer;"
                 onclick="document.getElementById('file-input').click()">📎</button>
-            <input id="input" autocomplete="off" placeholder="메시지 입력..." />
+            <input id="input" autocomplete="off" placeholder="메시지나 파일 드래그..." />
             <button type="submit"
-                style="background:#6e8efb; color:white; border:none; padding:10px 15px; border-radius:20px; cursor:pointer;">전송</button>
+                style="background:#6e8efb; color:white; border:none; padding:10px 15px; border-radius:20px;">전송</button>
         </form>
     </div>
 
     <div id="footer-bar">
         문의 <strong>제이투코어(J2CORE)</strong> 대표 <strong>정준용</strong><br>
-        <a href="mailto:jjyong3872@naver.com"
-            style="color:#0984e3; text-decoration:none; font-weight:bold; display: inline-block; margin-top: 5px;">📩
+        <a href="mailto:jjyong3872@naver.com" style="color:#0984e3; text-decoration:none; font-weight:bold;">📩
             jjyong3872@naver.com</a>
     </div>
 
-    <div id="context-menu">
-        <div onclick="handleShare()">📤 복사</div>
-        <div onclick="handleDelete()" style="color:red;">🗑️ 삭제</div>
-    </div>
     <div id="image-modal" onclick="this.style.display='none'"><img id="modal-img"
             style="max-width:90%; max-height:90%;"></div>
+
     <div id="settings-modal"
-        style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); width:300px; background:white; padding:20px; border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.2); z-index:10001;">
-        <h3 style="margin-top:0;">🛠️ 환경설정</h3>
-        <hr>
-        <div style="margin: 20px 0;"><label>🎨 테마</label>
-            <select id="theme-select" onchange="changeTheme()"
-                style="width:100%; padding:8px; border-radius:8px; margin-top:5px;">
-                <option value="light">기본</option>
-                <option value="dark">다크</option>
-            </select>
-        </div>
-        <button onclick="toggleSettings()"
-            style="width:100%; padding:10px; background:#6e8efb; color:white; border:none; border-radius:10px; cursor:pointer;">닫기</button>
+        style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); width:300px; background:white; padding:20px; border-radius:20px; z-index:10001; box-shadow:0 10px 30px rgba(0,0,0,0.2);">
+        <h3>🛠️ 환경설정</h3>
+        <select id="theme-select" onchange="changeTheme()" style="width:100%; padding:10px; margin-bottom:10px;">
+            <option value="light">기본</option>
+            <option value="dark">다크</option>
+        </select>
+        <button onclick="toggleSettings()" style="width:100%; padding:10px;">닫기</button>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
-        let userName = '', currentRoom = '', selectedId = null, selectedText = '', deferredPrompt;
+        let userName = '', currentRoom = '', deferredPrompt;
 
-        // [PWA 설치 로직 복구]
-        window.addEventListener('beforeinstallprompt', (e) => { e.preventDefault(); deferredPrompt = e; document.getElementById('main-install-btn').style.display = 'block'; });
-        function installApp() { if (deferredPrompt) { deferredPrompt.prompt(); deferredPrompt.userChoice.then(() => { deferredPrompt = null; document.getElementById('main-install-btn').style.display = 'none'; }); } }
-
-        // [메시지 수신 - 최우선 순위]
+        // [실시간 수신 핵심 로직]
         socket.on('chat message', (data) => { addMessage(data); });
         socket.on('load messages', (messages) => {
             const list = document.getElementById('messages');
             list.innerHTML = '';
             if (messages) messages.forEach(addMessage);
         });
+
         socket.on('room counts', (data) => {
             const list = document.getElementById('room-list');
             list.innerHTML = '';
@@ -332,43 +320,35 @@
         });
 
         function addMessage(data) {
-            if (!data) return;
             const list = document.getElementById('messages');
-            const loading = document.getElementById('loading-status');
-            if (loading) loading.remove();
-
             const item = document.createElement('li');
-            item.id = `msg-${data.id || Date.now()}`;
 
             if (data.type === 'system') {
-                item.style.cssText = `align-self:center; background:rgba(0,0,0,0.08); color:#777; font-size:0.75rem; padding:4px 12px; border-radius:15px; margin:15px 0; text-align:center; max-width:80%;`;
+                item.style.cssText = "align-self:center; background:rgba(0,0,0,0.05); color:#777; font-size:0.8rem; border-radius:10px; padding:5px 15px;";
                 item.innerHTML = data.text;
-                list.appendChild(item);
             } else {
-                const isMyMsg = data.name === userName;
-                item.className = isMyMsg ? 'my-msg' : 'other-msg';
-                let content = data.type === 'image' ? `<img src="${data.text}" style="max-width:100%; border-radius:10px; cursor:pointer;" onclick="openImageViewer(this.src)">` : data.text;
-                const readHtml = data.read_count > 0 ? `<span class="read-unread">${data.read_count}</span>` : '';
-                const timeHtml = `<span class="time-text">${data.time || ''}</span>`;
-                const infoSide = `<div style="position: absolute; bottom: 0; display: flex; flex-direction: column; ${isMyMsg ? 'left: -50px; align-items: flex-end;' : 'right: -50px; align-items: flex-start;'}">${readHtml}${timeHtml}</div>`;
-                item.innerHTML = isMyMsg ? `${content}${infoSide}` : `<strong>${data.name}</strong><br>${content}${infoSide}`;
-                item.oncontextmenu = (e) => { e.preventDefault(); selectedId = data.id; selectedText = data.text; const menu = document.getElementById('context-menu'); menu.style.display = 'block'; menu.style.left = e.clientX + 'px'; menu.style.top = e.clientY + 'px'; };
-                list.appendChild(item);
+                const isMy = data.name === userName;
+                item.className = isMy ? 'my-msg' : 'other-msg';
+                let content = data.type === 'image' ? `<img src="${data.text}" style="max-width:200px; border-radius:10px;" onclick="openViewer('${data.text}')">` : data.text;
+                const timeStr = data.time || new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+                const info = `<div style="position:absolute; bottom:0; ${isMy ? 'left:-55px; align-items:flex-end;' : 'right:-55px; align-items:flex-start;'} display:flex; flex-direction:column;">
+                    <span class="read-unread">${data.read_count || ''}</span>
+                    <span class="time-text">${timeStr}</span>
+                </div>`;
+                item.innerHTML = isMy ? `${content}${info}` : `<strong>${data.name}</strong><br>${content}${info}`;
             }
+            list.appendChild(item);
             list.scrollTop = list.scrollHeight;
         }
 
         function enterRoom(roomName) {
             if (!userName) { userName = prompt("닉네임:"); if (!userName) return; }
+            currentRoom = roomName;
             document.getElementById('list-area').style.display = 'none';
             document.getElementById('chat-area').style.display = 'flex';
             document.getElementById('footer-bar').style.display = 'none';
             document.getElementById('main-settings-btn').style.display = 'none';
-            document.getElementById('main-install-btn').style.display = 'none';
-            if (currentRoom === roomName) return;
-            currentRoom = roomName;
-            document.getElementById('room-title').textContent = currentRoom;
-            document.getElementById('messages').innerHTML = '<li id="loading-status" style="text-align:center; width:100%; color:gray;">로딩 중...</li>';
+            document.getElementById('room-title').textContent = roomName;
             socket.emit('join room', { room: roomName, name: userName });
         }
 
@@ -377,18 +357,46 @@
             document.getElementById('chat-area').style.display = 'none';
             document.getElementById('footer-bar').style.display = 'block';
             document.getElementById('main-settings-btn').style.display = 'block';
-            if (deferredPrompt) document.getElementById('main-install-btn').style.display = 'block';
         }
 
-        function leaveChat() { if (confirm("완전히 나갈까요?")) { socket.emit('leave room'); location.reload(); } }
-        document.getElementById('form').addEventListener('submit', (e) => { e.preventDefault(); const input = document.getElementById('input'); if (input.value.trim() && currentRoom) { socket.emit('chat message', { room: currentRoom, name: userName, text: input.value, type: 'text' }); input.value = ''; } });
-        function createNewRoom() { const i = document.getElementById('new-room-input'); if (i.value.trim()) enterRoom(i.value.trim()); }
+        // [파일 드롭 전송 기능 추가]
+        function handleDrop(e) {
+            e.preventDefault();
+            const file = e.dataTransfer.files[0];
+            if (file && file.type.startsWith('image/')) {
+                const reader = new FileReader();
+                reader.onload = (event) => {
+                    socket.emit('chat message', { room: currentRoom, name: userName, text: event.target.result, type: 'image' });
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        function uploadFile(input) {
+            const file = input.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    socket.emit('chat message', { room: currentRoom, name: userName, text: e.target.result, type: 'image' });
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        document.getElementById('form').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const input = document.getElementById('input');
+            if (input.value.trim()) {
+                socket.emit('chat message', { room: currentRoom, name: userName, text: input.value, type: 'text' });
+                input.value = '';
+            }
+        });
+
+        function createNewRoom() { const val = document.getElementById('new-room-input').value; if (val) enterRoom(val); }
         function toggleSettings() { const s = document.getElementById('settings-modal'); s.style.display = s.style.display === 'none' ? 'block' : 'none'; }
         function changeTheme() { document.body.classList.toggle('dark-mode', document.getElementById('theme-select').value === 'dark'); }
-        function openImageViewer(src) { document.getElementById('image-modal').style.display = 'flex'; document.getElementById('modal-img').src = src; }
-        function handleShare() { navigator.clipboard.writeText(selectedText).then(() => alert("복사되었습니다.")); }
-        function uploadFile(input) { alert('서버 파일 전송 기능 준비 중입니다.'); }
-        window.onclick = () => document.getElementById('context-menu').style.display = 'none';
+        function openViewer(src) { document.getElementById('image-modal').style.display = 'flex'; document.getElementById('modal-img').src = src; }
+        function leaveChat() { if (confirm("방에서 나갈까요?")) { socket.emit('leave room'); location.reload(); } }
     </script>
 </body>
 
