--- a/index.html
+++ b/index.html
@@ -262,14 +262,15 @@
                 <div id="room-title" style="font-weight:bold;"></div>
             </div>
             <button onclick="leaveChat()"
-                style="background:#ff4d4d; color:white; border:none; padding:5px 10px; border-radius:8px;">퇴장</button>
+                style="background:#ff4d4d; color:white; border:none; padding:5px 10px; border-radius:8px;">완전
+                퇴장</button>
         </div>
         <ul id="messages"></ul>
         <form id="form">
             <input type="file" id="file-input" style="display:none;" onchange="uploadFile(this)">
             <button type="button" style="background:none; border:none; font-size:1.2rem; cursor:pointer;"
                 onclick="document.getElementById('file-input').click()">📎</button>
-            <input id="input" autocomplete="off" placeholder="메시지나 파일 드래그..." />
+            <input id="input" autocomplete="off" placeholder="메시지 입력..." />
             <button type="submit"
                 style="background:#6e8efb; color:white; border:none; padding:10px 15px; border-radius:20px;">전송</button>
         </form>
@@ -283,7 +284,6 @@
 
     <div id="image-modal" onclick="this.style.display='none'"><img id="modal-img"
             style="max-width:90%; max-height:90%;"></div>
-
     <div id="settings-modal"
         style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); width:300px; background:white; padding:20px; border-radius:20px; z-index:10001; box-shadow:0 10px 30px rgba(0,0,0,0.2);">
         <h3>🛠️ 환경설정</h3>
@@ -297,10 +297,14 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
-        let userName = '', currentRoom = '', deferredPrompt;
+        let userName = '', currentRoom = '';
 
-        // [실시간 수신 핵심 로직]
-        socket.on('chat message', (data) => { addMessage(data); });
+        // [서버와 데이터 구조 동기화]
+        socket.on('chat message', (data) => {
+            console.log("수신 데이터:", data); // 전송 확인용
+            addMessage(data);
+        });
+
         socket.on('load messages', (messages) => {
             const list = document.getElementById('messages');
             list.innerHTML = '';
@@ -320,26 +324,50 @@
         });
 
         function addMessage(data) {
+            if (!data || !data.text) return;
             const list = document.getElementById('messages');
             const item = document.createElement('li');
 
-            if (data.type === 'system') {
-                item.style.cssText = "align-self:center; background:rgba(0,0,0,0.05); color:#777; font-size:0.8rem; border-radius:10px; padding:5px 15px;";
+            if (data.name === '시스템' || data.type === 'system') {
+                item.style.cssText = "align-self:center; background:rgba(0,0,0,0.05); color:#777; font-size:0.8rem; border-radius:10px; padding:5px 15px; margin: 5px 0;";
                 item.innerHTML = data.text;
             } else {
                 const isMy = data.name === userName;
                 item.className = isMy ? 'my-msg' : 'other-msg';
+
+                // 이미지/텍스트 구분
                 let content = data.type === 'image' ? `<img src="${data.text}" style="max-width:200px; border-radius:10px;" onclick="openViewer('${data.text}')">` : data.text;
-                const timeStr = data.time || new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+
+                // 서버의 timeStr 또는 현재 시간
+                const timeStr = data.time || new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', hour12: false });
+                const readCnt = data.read_count !== undefined ? data.read_count : '';
+
                 const info = `<div style="position:absolute; bottom:0; ${isMy ? 'left:-55px; align-items:flex-end;' : 'right:-55px; align-items:flex-start;'} display:flex; flex-direction:column;">
-                    <span class="read-unread">${data.read_count || ''}</span>
+                    <span class="read-unread">${readCnt > 0 ? readCnt : ''}</span>
                     <span class="time-text">${timeStr}</span>
                 </div>`;
+
                 item.innerHTML = isMy ? `${content}${info}` : `<strong>${data.name}</strong><br>${content}${info}`;
             }
             list.appendChild(item);
             list.scrollTop = list.scrollHeight;
         }
+
+        // 전송 이벤트 (서버의 socket.on('chat message') 구조에 맞춤)
+        document.getElementById('form').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const input = document.getElementById('input');
+            if (input.value.trim() && currentRoom) {
+                const msgData = {
+                    room: currentRoom,
+                    name: userName,
+                    text: input.value,
+                    type: 'text'
+                };
+                socket.emit('chat message', msgData);
+                input.value = '';
+            }
+        });
 
         function enterRoom(roomName) {
             if (!userName) { userName = prompt("닉네임:"); if (!userName) return; }
@@ -359,22 +387,10 @@
             document.getElementById('main-settings-btn').style.display = 'block';
         }
 
-        // [파일 드롭 전송 기능 추가]
-        function handleDrop(e) {
-            e.preventDefault();
-            const file = e.dataTransfer.files[0];
-            if (file && file.type.startsWith('image/')) {
-                const reader = new FileReader();
-                reader.onload = (event) => {
-                    socket.emit('chat message', { room: currentRoom, name: userName, text: event.target.result, type: 'image' });
-                };
-                reader.readAsDataURL(file);
-            }
-        }
-
+        // 파일 전송 (Base64)
         function uploadFile(input) {
             const file = input.files[0];
-            if (file) {
+            if (file && currentRoom) {
                 const reader = new FileReader();
                 reader.onload = (e) => {
                     socket.emit('chat message', { room: currentRoom, name: userName, text: e.target.result, type: 'image' });
@@ -383,20 +399,23 @@
             }
         }
 
-        document.getElementById('form').addEventListener('submit', (e) => {
+        function handleDrop(e) {
             e.preventDefault();
-            const input = document.getElementById('input');
-            if (input.value.trim()) {
-                socket.emit('chat message', { room: currentRoom, name: userName, text: input.value, type: 'text' });
-                input.value = '';
+            const file = e.dataTransfer.files[0];
+            if (file && file.type.startsWith('image/') && currentRoom) {
+                const reader = new FileReader();
+                reader.onload = (ev) => {
+                    socket.emit('chat message', { room: currentRoom, name: userName, text: ev.target.result, type: 'image' });
+                };
+                reader.readAsDataURL(file);
             }
-        });
+        }
 
         function createNewRoom() { const val = document.getElementById('new-room-input').value; if (val) enterRoom(val); }
         function toggleSettings() { const s = document.getElementById('settings-modal'); s.style.display = s.style.display === 'none' ? 'block' : 'none'; }
         function changeTheme() { document.body.classList.toggle('dark-mode', document.getElementById('theme-select').value === 'dark'); }
         function openViewer(src) { document.getElementById('image-modal').style.display = 'flex'; document.getElementById('modal-img').src = src; }
-        function leaveChat() { if (confirm("방에서 나갈까요?")) { socket.emit('leave room'); location.reload(); } }
+        function leaveChat() { if (confirm("방에서 완전히 나갈까요?")) { socket.emit('leave room'); location.reload(); } }
     </script>
 </body>
 
