--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </style>
 </head>
 
-<body ondragover="event.preventDefault()" ondrop="handleDrop(event)">
+<body>
     <div id="main-settings-btn"
         style="position: absolute; top: 20px; right: 20px; font-size: 1.5rem; cursor: pointer; z-index: 1001;"
         onclick="toggleSettings()">⚙️</div>
@@ -252,8 +252,7 @@
     </div>
 
     <div id="chat-area">
-        <div class="chat-header"
-            style="display:flex; justify-content:space-between; align-items:center; background:white; padding:10px; border-radius:12px; margin-bottom:5px;">
+        <div class="chat-header">
             <div style="display:flex; align-items:center; gap:10px;">
                 <span onclick="goBack()" style="cursor:pointer; font-size:1.2rem;">⬅️</span>
                 <div id="room-title" style="font-weight:bold;"></div>
@@ -262,7 +261,7 @@
                 style="background:#ff4d4d; color:white; border:none; padding:5px 10px; border-radius:8px;">퇴장</button>
         </div>
         <ul id="messages"></ul>
-        <form id="form" onsubmit="sendMessage(event)">
+        <form id="form">
             <input type="file" id="file-input" style="display:none;" onchange="uploadFile(this)">
             <button type="button" style="background:none; border:none; font-size:1.2rem; cursor:pointer;"
                 onclick="document.getElementById('file-input').click()">📎</button>
@@ -286,9 +285,9 @@
         const socket = io();
         let userName = '', currentRoom = '';
 
-        // [수정: 수신 즉시 무조건 실행]
+        // 수신부: 데이터가 오면 무조건 그리도록 수정
         socket.on('chat message', (data) => {
-            console.log("메시지 받음:", data);
+            console.log("메시지 수신됨:", data);
             addMessage(data);
         });
 
@@ -310,11 +309,12 @@
         });
 
         function addMessage(data) {
-            if (!data) return;
+            if (!data) return; // 데이터 자체가 없으면 종료
+
             const list = document.getElementById('messages');
             const item = document.createElement('li');
 
-            // 시스템 메시지 처리
+            // 1. 시스템 메시지
             if (data.name === '시스템' || data.type === 'system') {
                 item.style.cssText = "align-self:center; background:rgba(0,0,0,0.05); color:#777; font-size:0.8rem; border-radius:10px; padding:5px 15px; margin:5px 0;";
                 item.textContent = data.text;
@@ -323,33 +323,35 @@
                 return;
             }
 
-            const isMy = data.name === userName;
+            // 2. 일반 메시지 처리
+            const isMy = (data.name === userName);
             item.className = isMy ? 'my-msg' : 'other-msg';
 
-            // 이미지 여부 확인
+            // 이미지/텍스트 구분
             let content = data.type === 'image' ?
                 `<img src="${data.text}" style="max-width:200px; border-radius:10px;" onclick="openViewer('${data.text}')">` :
-                data.text;
+                (data.text || "");
 
-            // 시간 및 읽음 표시 (서버 필드명 일치)
+            // 시간 및 읽음표시 (서버의 read_count, time 필드와 매칭)
             const timeStr = data.time || new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', hour12: false });
-            const readCnt = (data.read_count !== undefined && data.read_count > 0) ? data.read_count : '';
+            const readCnt = (data.read_count > 0) ? data.read_count : "";
 
             const info = `<div style="position:absolute; bottom:0; ${isMy ? 'left:-55px; align-items:flex-end;' : 'right:-55px; align-items:flex-start;'} display:flex; flex-direction:column;">
-                <span class="read-unread" style="color:#ffeb33; font-size:0.7rem;">${readCnt}</span>
-                <span class="time-text" style="color:#999; font-size:0.6rem;">${timeStr}</span>
+                <span class="read-unread">${readCnt}</span>
+                <span class="time-text">${timeStr}</span>
             </div>`;
 
             item.innerHTML = isMy ? `${content}${info}` : `<strong>${data.name}</strong><br>${content}${info}`;
+
             list.appendChild(item);
             list.scrollTop = list.scrollHeight;
         }
 
-        function sendMessage(e) {
+        // 전송부: 서버가 요구하는 객체 형태 그대로 전송
+        document.getElementById('form').addEventListener('submit', (e) => {
             e.preventDefault();
             const input = document.getElementById('input');
             if (input.value.trim() && currentRoom) {
-                // 서버 socket.on('chat message')가 받는 인자 순서와 형식을 100% 맞춤
                 socket.emit('chat message', {
                     room: currentRoom,
                     name: userName,
@@ -358,7 +360,7 @@
                 });
                 input.value = '';
             }
-        }
+        });
 
         function enterRoom(roomName) {
             if (!userName) { userName = prompt("닉네임:"); if (!userName) return; }
@@ -387,19 +389,8 @@
             }
         }
 
-        function handleDrop(e) {
-            e.preventDefault();
-            const file = e.dataTransfer.files[0];
-            if (file && file.type.startsWith('image/') && currentRoom) {
-                const reader = new FileReader();
-                reader.onload = (ev) => {
-                    socket.emit('chat message', { room: currentRoom, name: userName, text: ev.target.result, type: 'image' });
-                };
-                reader.readAsDataURL(file);
-            }
-        }
-
         function createNewRoom() { const val = document.getElementById('new-room-input').value; if (val) enterRoom(val); }
+        function toggleSettings() { alert('설정은 준비 중입니다.'); }
         function openViewer(src) { document.getElementById('image-modal').style.display = 'flex'; document.getElementById('modal-img').src = src; }
         function leaveChat() { if (confirm("방에서 완전히 나갈까요?")) { socket.emit('leave room'); location.reload(); } }
     </script>
